[package]
name = "drivechain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "drivechain"
path = "src/lib.rs"

[dependencies]
bitcoin = "0.27.1"
hyper = { version = "0.14.15", features = ["client", "http1", "runtime"] }
tokio = { version = "1", features = ["full"] }
base64 = "0.13"
serde_json = "1.0.71"
serde = { version = "1.0.130", features = ["derive"] }
hex = "0.4.3"
rand = "0.8.4"
bincode = "1.3.3"
sled = "0.34.7"
byteorder = "1.4.3"
sha2 = "0.10.1"
