[package]
name = "drivechain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "drivechain"
path = "src/lib.rs"

[dependencies]
bitcoin = "0.27.1"
ureq = { version = "2.4", features = ["json"] }
base64 = "0.13"
serde = { version = "1.0.130", features = ["derive"] }
hex = "0.4.3"
bincode = "1.3.3"
sled = "0.34.7"
byteorder = "1.4.3"
sha2 = "0.10.1"
cxx = "1.0"
thiserror = "1.0.31"

[build-dependencies]
cxx-build = "1.0"
