[package]
name = "drivechain"
version = "0.1.0"
edition = "2021"
description = "A library for building BIP300/BIP301 Bitcoin sidechains."
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "drivechain"
path = "src/lib.rs"

[dependencies]
bitcoin = "0.29.1"
ureq = { version = "2.4", features = ["json"] }
base64 = "0.13"
serde = { version = "1.0.130", features = ["derive"] }
hex = "0.4.3"
bincode = "1.3.3"
sled = "0.34.7"
byteorder = "1.4.3"
sha2 = "0.10.1"
thiserror = "1.0.31"
log = "0.4"
chrono = "0.4"
env_logger = "0.9"
